package mleap.core.linalg;

message DenseVector {
    repeated double values = 1;
}